# monitor-mcp-server

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  README_EN.md  env.example  main.py  pyproject.toml
docs/: api_reference.md
k8s/: README.md  deployment.yaml  secret.yaml  service.yaml
openspec/: project.md
openspec/changes/archive/2025-10-22-add-metric-labels-tool/: proposal.md  tasks.md
openspec/changes/archive/2025-10-22-add-metric-labels-tool/specs/prometheus-tools/: spec.md
openspec/changes/optimize-metric-labels-performance/: proposal.md  tasks.md
openspec/changes/optimize-metric-labels-performance/specs/prometheus-tools/: spec.md
openspec/specs/prometheus-tools/: spec.md
skills/monitor-query/: SKILL.md
skills/monitor-query/references/: reference.md
src/monitor_mcp_server/: __init__.py  __main__.py  client.py  config.py  logging_config.py  monitor_agent.py  tools.py
src/prometheus_mcp_server/: server.py
tests/: test_client.py  test_docker_integration.py  test_logging_config.py  test_main.py  test_mcp_protocol_compliance.py  test_monitor_agent.py  test_tools.py
