[project]
name = "monitor_mcp_server"
version = "1.0.0"
description = "基于 MCP 协议的 Prometheus / Thanos 监控服务器"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv",
    "httpx>=0.27",
    "structlog>=23.0.0",
    "fastmcp>=2.11.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "docker>=7.0.0",
]

[project.scripts]
monitor-mcp-server = "monitor_mcp_server.tools:run_server"

[tool.setuptools]
packages = ["monitor_mcp_server"]
package-dir = {"" = "src"}

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
# 默认不启用 coverage；需要时通过显式参数调用：
#   pytest --cov=src --cov-report=term-missing --cov-fail-under=80
# CI 脚本可固化上面一行，本地运行保持轻量

[tool.coverage.run]
source = ["src/monitor_mcp_server"]
omit = ["*/__pycache__/*", "*/tests/*", "*/.venv/*", "*/venv/*"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise NotImplementedError",
    "if __name__ == .__main__.",
    "pass",
    "raise ImportError"
]
precision = 1
show_missing = true
skip_covered = false

[tool.coverage.json]
show_contexts = true

[tool.coverage.xml]
output = "coverage.xml"
