[project]
name = "monitor_mcp_server"
version = "1.0.0"
description = "基于 MCP 协议的 Monitor MCP Server，提供 Prometheus / Thanos / Mimir / VictoriaMetrics 监控查询能力"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Monitor MCP Server Maintainers" },
]
keywords = ["mcp", "prometheus", "thanos", "mimir", "victoriametrics", "monitoring", "ai"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "python-dotenv>=1.0,<2.0",
    "httpx>=0.27,<1.0",
    "structlog>=23.0.0,<26.0.0",
    "fastmcp>=2.11.3,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0,<9.0.0",
    "pytest-cov>=4.0.0,<7.0.0",
    "pytest-asyncio>=0.21.0,<2.0.0",
    "pytest-mock>=3.10.0,<4.0.0",
    "docker>=7.0.0,<8.0.0",
]

[project.scripts]
monitor-mcp-server = "monitor_mcp_server.tools:run_server"

[project.urls]
Homepage = "https://github.com/Tobewont/monitor-mcp-server"
Source = "https://github.com/Tobewont/monitor-mcp-server"
Issues = "https://github.com/Tobewont/monitor-mcp-server/issues"

[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

# hatchling 自动发现 src/ 下所有包，无需手动维护包列表
[tool.hatch.build.targets.wheel]
packages = ["src/monitor_mcp_server"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/main.py",
    "/README.md",
    "/README_EN.md",
    "/LICENSE",
    "/pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
# 默认不启用 coverage；需要时通过显式参数调用：
#   pytest --cov=src --cov-report=term-missing --cov-fail-under=80
# CI 脚本可固化上面一行，本地运行保持轻量

[tool.coverage.run]
source = ["src/monitor_mcp_server"]
omit = ["*/__pycache__/*", "*/tests/*", "*/.venv/*", "*/venv/*"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise NotImplementedError",
    "if __name__ == .__main__.",
    "pass",
    "raise ImportError"
]
precision = 1
show_missing = true
skip_covered = false

[tool.coverage.json]
show_contexts = true

[tool.coverage.xml]
output = "coverage.xml"
